# Claude_Enhancer

./: .coveragerc  .dockerignore  .docpolicy.yaml  .env.development  .env.example  .env.production  .flake8  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.json  .permission_lock  .pre-commit-config.yaml  .pylintrc  .self-healing.config  .shellcheckrc  .version_history.json  ACCEPTANCE_CHECKLIST.md  ACCEPTANCE_REPORT.md  ACCESSIBILITY_TESTING_REPORT.md  ACCESSIBILITY_USABILITY_AUDIT_REPORT.md  AGENTS.md  AGENT_COLLABORATION_IMPROVEMENT_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_FIX_COMPLETE.md  AUTHENTICATION_TESTING_SUMMARY.md  BACKEND_ARCHITECTURE.md  BACKEND_CODE_REVIEW.md  BEST_PRACTICES.md  BP_PROBE.md  BP_PROTECTION_REPORT.md  BRAND_MIGRATION_COMPLETE.md  BRAND_UNIFICATION_COMPLETION_REPORT.md  BRAND_UNIFICATION_FINAL_REPORT.md  CAPABILITY_REPORT.md  CHANGELOG.md  CHANGELOG_P2_UPDATE.md  CHANGELOG_UPDATE.md  CHANGELOG_v5.5.1.md  (+510 more)
.ce/: task.yml
.ce_snapshots/: auto_fix_snapshot_20251028_160057.json
.chaos_backup/: original_permissions.txt
.claude/: AGENT_OUTPUT_SUMMARIZER.md  AGENT_RULES.md  AGENT_STRATEGY.md  ARCHITECTURE_LAYERS.md  ARCHITECTURE_LOADER.md  CLAUDE_ENHANCER_PERFORMANCE_OPTIMIZATION_COMPLETE.md  CLEANUP_STRATEGY.md  CODE_FIRST_POLICY.md  COMPLETE_SYSTEM_GUIDE.md  CONFIGURATION_MIGRATION_REPORT.md  CONFIG_UNIFIED_GUIDE.md  CONSISTENCY_ISSUES.md  DECISIONS.md  DETAILED_WORKFLOW.md  DOCUMENT_LOADING_TRIGGERS.yaml  ENFORCEMENT_STRATEGY.md  FEATURE_INTEGRATION_TEMPLATE.md  FEATURE_REGISTRY.yaml  HOW_TO_USE_CLAUDE_ENHANCER.md  ISSUES_AND_SOLUTIONS.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_SYSTEM_GUIDE.md  OUTPUT_CONTROL_STRATEGY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_STATUS_REPORT.md  PHASE_AGENT_STRATEGY.md  PHASE_DATA_FLOW.md  PHASE_FLOW_CONTROLLER.md  QUICK_START.md  README.md  REAL_STRESS_TEST_REPORT.md  RULES.md  SAFETY_RULES.md  SELF_CHECK_MECHANISM.md  SELF_OPTIMIZATION_SUMMARY.md  SMART_LOADING_IMPLEMENTATION_REPORT.md  SMART_LOADING_STRATEGY.md  SMART_LOADING_SUCCESS_REPORT.md  SMART_LOADING_USAGE_GUIDE.md  STRESS_TEST_REPORT.md  (+31 more)
.evidence/: 75step_summary.txt  QUICK_FIX_CHECKLIST.md  README.md  fix_recommendations.md  index.json  last_run.json  local_ci_last_run.json  schema.json  validation_report_detailed.md
.gates/: .gitignore  00.ok  00.ok.sig  01.ok  01.ok.sig  02.ok  02.ok.sig  03.ok  03.ok.sig  04.ok  04.ok.sig  05.ok  05.ok.sig  06.ok  06.ok.sig  07.ok  07.ok.sig  README.md  _index.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.kpi/: baseline.json  history.jsonl
.learning/: stats.json
.learning_backup/: index.json
.locked/: README.md  manifest.json
.notion/: config.yml
.perfect21/: config.json  config.yaml  decisions.json  learning_data.json  quality_config.json  workflow_state.json  workspaces.json
.perfect21_cache/: scan___init__.py_1757955690.4843018.pkl
.phase/: current  history  start_time.txt  task.txt
.templates/: CLAUDE.template.md  FEATURES.yml  README.md  memory-compression-quickref.md  memory-decision-template.json  sync_templates.sh
.version_backups/: backup_20250915_205523.json  backup_20250916_010130.json
.workflow/: ACCEPTANCE_CHECKLIST.md  ACCEPTANCE_CHECKLIST_PARALLEL.md  ACCEPTANCE_CHECKLIST_fix-3-core-issues.md  ACCEPTANCE_CHECKLIST_parallel-strategy.md  ACCEPTANCE_CHECKLIST_performance_optimization.md  ACCEPTANCE_CHECKLIST_phase-skills-hooks-optimization.md  ACCEPTANCE_CHECKLIST_workflow_fixes.md  ACCEPTANCE_REPORT.md  ACCEPTANCE_REPORT_20251101.md  ACCEPTANCE_REPORT_exemption_removal.md  ACCEPTANCE_REPORT_fix-3-core-issues.md  ACCEPTANCE_REPORT_parallel-strategy.md  ACCEPTANCE_REPORT_performance_optimization.md  ACCEPTANCE_REPORT_phase7_cleanup_skills.md  ACCEPTANCE_REPORT_self-enforcing-quality-system.md  ACCEPTANCE_REPORT_v7.0.1.md  ACCEPTANCE_REPORT_workflow_consistency_fixes.md  ACCEPTANCE_REPORT_workflow_supervision.md  ACTIVE  ACTIVE.example  BYPASS_WORKFLOW  CE-ISSUE-005-COMPLETION.md  DEFENSE_IN_DEPTH.md  DESIGN_HISTORY.yaml  GATE_VALIDATOR_GUIDE.md  IMPACT_ASSESSMENT.md  IMPACT_ASSESSMENT_Phase2.md  IMPACT_ASSESSMENT_Phase3.md  IMPACT_ASSESSMENT_Phase4.md  IMPACT_ASSESSMENT_performance_optimization.md  IMPACT_ASSESSMENT_workflow_fixes.md  IMPLEMENTATION_CHECKLIST_phase-skills-hooks-optimization.md  LOCK.json  P1_DISCOVERY.md  P1_DISCOVERY_fix-3-core-issues.md  P1_DISCOVERY_parallel-strategy.md  P1_DISCOVERY_workflow_fixes.md  PHASE3_TEST_RESULTS.md  PLAN.md  PLAN_fix-3-core-issues.md  (+40 more)
_diag/: SYSTEM_STATUS_REPORT.md
_workflows_disabled/: ci-cd-pipeline.yml  claude-enhancer-tests.yml  comprehensive-testing.yml  deploy-production.yml  deployment.yml  git-workflow-automation.yml
api/: auth_api.py  middleware.py  openapi.yaml  perfect21_sdk.py  rate_limiter.py  rest_server.py  validators.py
api-specification/: README.md  api-interfaces-summary.md  api-versioning-and-rate-limiting.md  auth-api-implementation-guide.md  auth-api-openapi.yaml  auth-api-quickstart.md  auth-api-testing-strategy.md  error-codes-definition.md  openapi-auth-spec.yaml
application/: __init__.py
backend/: .env.example  DATA_ACCESS_LAYER_README.md  example_usage.py  main.py
backup_configs/: .mcp.json  CLAUDE.md
benchmarks/: PERFORMANCE_BASELINE.md  README.md  performance_report_2025-10-20.md
config/: development.yaml  dual_engine_config.yaml  perfect21_max.yaml  production.yaml  redis.conf  security.env.example  security_config.py  vibepilot_max.yaml
core/: __init__.py  ai_pool.py  interfaces.py  parallel_coordinator.py  router.py  workspace_manager.py
coverage/: coverage.xml
data/: auth.db  perfect21.db
database/: README.md  auth_schema.sql  auth_system_complete_schema.sql  auth_system_er_diagram.md  auth_system_performance_analysis.sql  backup_recovery_strategy.sql  database_er_diagram.md  high_performance_auth_schema.sql  index_optimization_guide.md  init_todo_db.py  performance_indexes.sql  performance_monitor.sql  performance_monitoring.sql  redis_caching_strategy.sql  (+3 more)
(+2623 files in other folders)
