[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfect21"
version = "3.0.0"
description = "Perfect21 - Claude Code的智能工作流增强层"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.2",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "celery>=5.3.4",
    "kombu>=5.3.4",
    "aiosmtplib>=3.0.1",
    "email-validator>=2.1.0",
    "pillow>=10.1.0",
    "python-magic>=0.4.27",
    "cachetools>=5.3.2",
    "lru-dict>=1.2.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "cryptography>=41.0.8",
    "psutil>=5.9.6",
    "gitpython>=3.1.40",
    "orjson>=3.9.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
    "types-pytz>=2023.3.1.1",
    "types-tabulate>=0.9.0",
    "types-Pillow>=10.1.0"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
explicit_package_bases = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "gitpython.*",
    "psutil.*",
    "redis.*",
    "celery.*",
    "kombu.*",
    "prometheus_client.*",
    "structlog.*",
    "passlib.*",
    "jose.*",
    "magic.*",
    "PIL.*"
]
ignore_missing_imports = true

# Exclude test files from strict checking initially
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
  | core/claude-code-unified-agents
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["core/claude-code-unified-agents"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["features", "api", "main", "modules"]
omit = [
    "*/tests/*",
    "*/test_*",
    "core/claude-code-unified-agents/*",
    "venv/*",
    "*/migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]